Fix dashboard map on mobiles

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -114,11 +114,21 @@ body {
     margin-top: 0.5em;
     font-size: 1.5em;
   }
+
+  .leaflet-container-info {
+    height: 45vh;
+    width: 100vw;
+  }
 }
 
 @media (min-width: 1024px) {
   .only-on-mobiles-and-tablet {
     display: none!important;
+  }
+
+  .leaflet-container-info {
+    height: 45vh;
+    width: 35vw;
   }
 }
 
@@ -130,11 +140,6 @@ body {
 .leaflet-container-main {
   height: 100vh;
   width: 100vw;
-}
-
-.leaflet-container-info {
-  height: 400px;
-  width: 35vw;
 }
 
 .ui.padded.segment.vertical.segment,
